Fixed problem with singlefetch and problem with  to large postsizes